[metadata]
name = gym-minesweeper
version = 0.1.0
author = Antony Kellermann
author-email = aokellermann@gmail.com
home-page = https://github.com/aokellermann/gym-minesweeper
description = OpenAI gym environment for minesweeper.
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
platform = any
project_urls =
    Bug Tracker = https://github.com/aokellermann/gym-minesweeper/issues

[options]
python_requires = >= 3.8
test_suite = tests
setup_requires =
    setuptools
install_requires =
    gym

[options.extras_require]
dev =
    yapf
    pylint
    pytest

[yapf]
based_on_style = pep8
column_limit = 120

[pycodestyle]
max-line-length = 120
